fixes broken layout bug in contacts panel

--- a/app/components/Contacts/ContactsPanel/ContactsPanel.scss
+++ b/app/components/Contacts/ContactsPanel/ContactsPanel.scss
@@ -26,7 +26,7 @@
     align-items: center;
     justify-content: space-between;
     flex-wrap: nowrap;
-    padding: 12px 24px;
+    padding: 12px 12px 12px 24px;
 
     button {
       background-color: transparent;
@@ -53,6 +53,10 @@
       display: flex;
       align-items: center;
 
+      span {
+        margin-left: 6px;
+      }
+
       svg {
         path {
           fill: var(--tx-list-button-icon);
@@ -60,21 +64,21 @@
       }
 
       .editButton {
-        width: 100px;
-        margin-right: 10px;
+        // width: 100px;
+        // margin-right: 10px;
       }
 
       .infoButton {
-        width: 150px;
-        margin-right: 10px;
+        // width: 10px;
+        // margin-right: 10px;
       }
 
       .sendButton {
-        width: 150px;
+        // width: 150px;
       }
 
       .deleteButton {
-        width: 100px;
+        // width: 100px;
       }
     }
   }
